postcss/testData/inspections/mediaRanges/equalSigns.pcss
@media (200px <error descr="Equal operator is not allowed in this context">=</error> width
      <error descr="Equal operator is not allowed in this context">=</error> 300px){}